[package]
name = "trie-eip1186"
version = "0.5.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "EIP-1186 compliant proof generation and verification"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[dependencies]

[features]
default = ["std"]
std = [
  "trie-db/std",
  "hash-db/std",
]
