[package]
name = "trie-root"
version = "0.18.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "In-memory patricia trie operations"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
categories = [ "no-std" ]
edition = "2018"

[dependencies]

[features]
default = ["std"]
std = [
	"hash-db/std"
]
