[package]
name = "keccak-hasher"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Keccak-256 implementation of the Hasher trait"
repository = "https://github.com/paritytech/parity/"
license = "Apache-2.0"
edition = "2018"

[dependencies]

[features]
default = ["std"]
std = [
  "hash-db/std",
]
