[package]
name = "reference-trie"
version = "0.29.1"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Simple reference trie format"
repository = "https://github.com/paritytech/trie/"
license = "Apache-2.0"
edition = "2018"

[dependencies]

[dev-dependencies]
trie-bench = { path = "../trie-bench" }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
# no actual support for std, only to avoid a cargo issues
std = [
  "trie-db/std",
  "trie-root/std",
]
