[package]
name = "trie-db-test"
version = "0.29.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Tests for trie-db crate"
repository = "https://github.com/paritytech/trie"
license = "Apache-2.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
array-bytes = "6.0.0"
